[package]
name = "node-quic-client"
version = "0.1.0"
license = "MIT"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]
default = ["rustls"]

[dependencies]
neon = "1"
once_cell = "1.19.0"
quinn = { version = "0.10.2", features = ["ring"] }
rustls = { version = "0.21.0", default-features = false, features = ["quic"], optional = true }
rustls-native-certs = "0.6.3"
rustls-pemfile = "1.0.4"
tokio = { version = "1.37.0", features = ["rt-multi-thread", "macros"] }

[patch.crates-io]
neon = { git = "https://github.com/neon-bindings/neon.git" }

[profile.release]
debug = false
lto = "fat"
strip = "symbols"
